--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,112 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.example</groupId>
-  <artifactId>demo-jmockit-servlet</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>demo-jmockit-servlet Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>4.0.1</version> <!-- Use the latest version available -->
-        <scope>provided</scope>
-    </dependency>
-    
-  </dependencies>
-  <build>
-    <plugins>
-        <plugin>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>9.4.43.v20210629</version> <!-- Use the latest version available -->
-        </plugin>
-    </plugins>
-</build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>
+		4.0.0
+	</modelVersion>
+	<groupId>
+		com.example
+	</groupId>
+	<artifactId>
+		demo-jmockit-servlet
+	</artifactId>
+	<packaging>
+		war
+	</packaging>
+	<version>
+		1.0-SNAPSHOT
+	</version>
+	<name>
+		demo-jmockit-servlet Maven Webapp
+	</name>
+	<url>
+		http://maven.apache.org
+	</url>
+	<properties>
+		<maven.compiler.source>
+			1.8
+		</maven.compiler.source>
+		<maven.compiler.target>
+			1.8
+		</maven.compiler.target>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>
+				junit
+			</groupId>
+			<artifactId>
+				junit
+			</artifactId>
+			<version>
+				4.13.2
+			</version>
+			<scope>
+				test
+			</scope>
+		</dependency>
+		<dependency>
+			<groupId>
+				javax.servlet
+			</groupId>
+			<artifactId>
+				javax.servlet-api
+			</artifactId>
+			<version>
+				4.0.1
+			</version>
+			<scope>
+				provided
+			</scope>
+		</dependency>
+		<dependency>
+			<groupId>
+				org.jmockit
+			</groupId>
+			<artifactId>
+				jmockit
+			</artifactId>
+			<version>
+				1.49
+			</version>
+			<!-- replace with the actual version -->
+			<scope>
+				test
+			</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>
+					org.apache.maven.plugins
+				</groupId>
+				<artifactId>
+					maven-surefire-plugin
+				</artifactId>
+				<version>
+					2.22.2
+				</version>
+				<configuration>
+					<argLine>
+						-javaagent:${settings.localRepository}/org/jmockit/jmockit/1.49/jmockit-1.49.jar
+					</argLine>
+					<includes>
+						<include>
+							**/*Test.java
+						</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>
+					org.eclipse.jetty
+				</groupId>
+				<artifactId>
+					jetty-maven-plugin
+				</artifactId>
+				<version>
+					9.4.43.v20210629
+				</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
